<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.samurai.sergey.noughts_and_croses.GameActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:text="@string/status_bar"
        android:id="@+id/status_bar" />

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:columnCount="3"
    android:rowCount="5"
    tools:context="com.samurai.sergey.noughts_and_croses.GameActivity"
    android:layout_below="@+id/status_bar"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <Button
        android:id="@+id/game_button1"
        android:adjustViewBounds="true"
        android:layout_row="0"
        android:layout_column="0"
        android:onClick="pressButton"/>

    <Button
        android:id="@+id/game_button2"
        android:adjustViewBounds="true"
        android:layout_row="0"
        android:layout_column="1"
        android:onClick="pressButton"/>

    <Button
        android:id="@+id/game_button3"
        android:adjustViewBounds="true"
        android:layout_row="0"
        android:layout_column="2"
        android:onClick="pressButton"/>

    <Button
        android:id="@+id/game_button4"
        android:adjustViewBounds="true"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="pressButton"/>

    <Button
        android:id="@+id/game_button5"
        android:adjustViewBounds="true"
        android:layout_row="1"
        android:layout_column="1"
        android:onClick="pressButton"/>

    <Button
        android:id="@+id/game_button6"
        android:adjustViewBounds="true"
        android:layout_row="1"
        android:layout_column="2"
        android:onClick="pressButton"/>

    <Button
        android:id="@+id/game_button7"
        android:adjustViewBounds="true"
        android:layout_row="2"
        android:layout_column="0"
        android:onClick="pressButton"/>

    <Button
        android:id="@+id/game_button8"
        android:adjustViewBounds="true"
        android:layout_row="2"
        android:layout_column="1"
        android:onClick="pressButton"/>

    <Button
        android:id="@+id/game_button9"
        android:adjustViewBounds="true"
        android:layout_row="2"
        android:layout_column="2"
        android:onClick="pressButton"/>

    <TextView
        android:text="@string/X_wins_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/X_wins"
        android:layout_row="3"
        android:layout_column="0" />

    <TextView
        android:text="@string/O_wins_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/O_wins"
        android:layout_row="3"
        android:layout_column="1" />

    <TextView
        android:text="@string/Draws_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/Draws"
        android:layout_row="3"
        android:layout_column="2" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:textAlignment="center"
        android:id="@+id/X_wins_count"
        android:layout_row="4"
        android:layout_column="0" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:textAlignment="center"
        android:id="@+id/O_wins_count"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:textAlignment="center"
        android:id="@+id/Draws_count"
        android:layout_row="4"
        android:layout_column="2" />

</GridLayout>

</RelativeLayout>
